# range_calib

./: .gitignore  CMakeLists.txt  README.md
matlab/: raw2pcd.m  showPcdAsDepthImage.m
matlab/sim_calib/: addCamera.m  getFinalX.m  main.m  myfun.m  out.txt  plotResult.m  projPtsWithNoise.m  q2r.m  r2q.m  readFromFile.m  sample_problem.m  sim.txt  simpleRot.m  test_addCamera.m  visualize_problem.m  writeToFile.m
src/: ball_filter.cpp  ball_filter.hpp  ball_selector.hpp  bg_sub.hpp  bg_subtractor.hpp  blob_extractor.hpp  calib3D.cpp  downsample.cpp  error_models.hpp  extract_indices.cpp  filterBG.cpp  fit_sphere.hpp  generic_sensor.hpp  linearTF_solver.hpp  openni_ss.cpp  pcl_utils.hpp  pipeline.cpp  pipeline.hpp  ransac.hpp  resource_manager.hpp  seg_sphere.cpp  show_calib_result.cpp  show_pcd.cpp  sphere_fitter.hpp  test_2ndrun.cpp  test_ballfilter.cpp  test_be.cpp  test_bgs.cpp  test_calib3D.cpp  test_f.cpp  test_pipeline.cpp  types.hpp
test/: CMakeLists.txt  fitplane.cpp
